--- a/css/style.css
+++ b/css/style.css
@@ -207,6 +207,10 @@ select {
   border: none;
 }
 
+a {
+  text-decoration: none;
+}
+
 [type=button],
 [type=reset],
 [type=submit],
@@ -291,6 +295,7 @@ fieldset {
 .header {
   border-bottom: 1px solid #DADADA;
   background: rgba(0, 0, 0, 0.2);
+  height: 80px;
 }
 .header__wrapper {
   display: -webkit-box;
@@ -302,6 +307,8 @@ fieldset {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  padding-left: 15vw;
+  height: 100%;
 }
 .header__menu {
   gap: 25px;
@@ -309,14 +316,35 @@ fieldset {
   display: -ms-flexbox;
   display: flex;
 }
+.header__menu a {
+  color: #FFF;
+  font-size: 15px;
+  font-weight: 600;
+  line-height: 130%;
+  text-decoration: none;
+}
+.header__info {
+  color: white;
+}
 .header__links {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  height: 100%;
 }
 .header__profile {
   border: 1px solid #C1C1C1;
-  padding: 19px;
+  height: 100%;
+  width: 80px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .header__button {
   border: 1px solid #C1C1C1;
@@ -345,6 +373,7 @@ fieldset {
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 10px;
+  height: 100%;
 }
 .sidebar__block {
   display: -webkit-box;
@@ -357,7 +386,6 @@ fieldset {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 100%;
   gap: 15px;
 }
 .sidebar__menu {
