--- a/scss/style.scss
+++ b/scss/style.scss
@@ -297,6 +297,10 @@ select {
     border: none;
 }
 
+a {
+    text-decoration: none;
+}
+
 [type=button],
 [type=reset],
 [type=submit],
@@ -368,29 +372,48 @@ fieldset {
 .header {
     border-bottom: 1px solid #DADADA;
     background: rgba(0, 0, 0, 0.20);
+    height: 80px;
 
     &__wrapper {
         display: flex;
         align-items: center;
         justify-content: space-between;
+        padding-left: 15vw;
+        height: 100%;
     }
 
     &__menu {
         gap: 25px;
         display: flex;
+
+        a {
+            color: #FFF;
+            font-size: 15px;
+            font-weight: 600;
+            line-height: 130%;
+            text-decoration: none;
+        }
     }
 
     &__details {}
 
-    &__info {}
+    &__info {
+        color: white;
+    }
 
     &__links {
         display: flex;
+        height: 100%;
+
     }
 
     &__profile {
         border: 1px solid #C1C1C1;
-        padding: 19px;
+        height: 100%;
+        width: 80px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     &__button {
@@ -414,13 +437,13 @@ fieldset {
         align-items: center;
         flex-direction: column;
         gap: 10px;
+        height: 100%;
     }
 
     &__block {
         display: flex;
         align-items: center;
         flex-direction: column;
-        height: 100%;
         gap: 15px;
     }
 
@@ -436,7 +459,6 @@ fieldset {
         padding: 30px 0;
         display: flex;
         flex-grow: 1;
-
         width: 2px;
         background: #6CA195;
     }
