--- a/scss/style.scss
+++ b/scss/style.scss
@@ -386,8 +386,8 @@ fieldset {
 }
 
 .header {
-    border-bottom: 1px solid #DADADA;
     background: rgba(0, 0, 0, 0.20);
+    border-bottom: 1px solid #DADADA;
     height: 80px;
     position: sticky;
     width: 100%;
@@ -649,6 +649,7 @@ body {
         .container {
             margin-top: 220px;
             display: grid;
+            gap: 50px;
             grid-template-columns: repeat(2, 1fr);
         }
     }
