--- a/scss/style.scss
+++ b/scss/style.scss
@@ -334,9 +334,12 @@ fieldset {
 }
 
 .container {
-    max-width: 1350px;
+    max-width: 1400px;
     margin: 0 auto;
 }
+
+
+
 
 .button {
     background: #004F3D;
@@ -384,6 +387,26 @@ fieldset {
     transition: all .3s;
     border: 1px solid transparent;
 }
+
+.title {
+    display: flex;
+    gap: 20px;
+
+    &__count {
+        color: #004F3D;
+        font-size: 24px;
+        font-weight: 600;
+        line-height: 110%;
+    }
+
+    &__text {
+        color: rgba(53, 53, 53, 0.50);
+        font-size: 24px;
+        font-weight: 600;
+        line-height: 110%;
+    }
+}
+
 
 .header {
     background: rgba(0, 0, 0, 0.20);
@@ -742,47 +765,104 @@ fieldset {
 
 
 .catalog {
+    position: relative;
+
+    &__bg {
+        position: absolute;
+        top: -120px;
+        left: 0;
+        object-fit: cover;
+        width: 100%;
+        z-index: -1;
+    }
 
     &__wrapper {}
 
-    &__products {}
+    &__products {
+        margin-top: 50px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 2fr;
+        gap: 100px;
+    }
 
     &__product {}
 }
 
-.container {}
-
-.title {
-
-    &__count {}
-
-    &__text {}
-}
 
 .product {
 
-    &__image {}
+    &__image {
+        border-radius: 50px 50px 0 50px;
+        overflow: hidden;
+        width: 100%;
 
-    &__type {}
+        img {
+            width: 100%;
+        }
+    }
 
-    &__title {}
+    &:hover {
+        .product__title {
+            color: #004F3D;
+        }
+    }
 
-    &__price {}
+    &__type {
+        margin-top: 30px;
+        color: rgba(53, 53, 53, 0.50);
+        font-size: 15px;
+        line-height: 130%;
+    }
+
+    &__title {
+        margin-top: 13px;
+        color: var(--black, #201E1E);
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 130%;
+        transition: all .3s;
+
+    }
+
+    &__price {
+        color: #000;
+        text-align: right;
+        font-size: 28px;
+        font-weight: 600;
+        line-height: 130%;
+    }
 }
 
 .product-big {
 
     &__image {}
 
-    &__block {}
+    &__block {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 
-    &__text {}
+    &__text {
+        display: grid;
+        width: 50%;
+    }
 
-    &__title {}
+    &__title {
+        color: var(--black, #201E1E);
+        font-size: 24px;
+        font-weight: 600;
+        line-height: 110%;
+    }
 
-    &__descr {}
+    &__descr {
+        color: var(--second_grey, rgba(53, 53, 53, 0.50));
+        font-size: 20px;
+        line-height: 130%;
+    }
 
-    &__button {}
+    &__button {
+        width: 50px;
+        height: 50px;
+    }
 }
-
-.button-white {}
